--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "generator-zx-vue",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "yeoman-generator": "^5.7.0"
-  }
+    "name": "generator-zx-vue",
+    "version": "1.0.1",
+    "main": "index.js",
+    "license": "MIT",
+    "dependencies": {
+        "yeoman-generator": "^5.7.0"
+    },
+    "publishConfig": {
+        "registry": "http://registry.npmjs.org/"
+    }
 }
