--- a/generators/app/templates/.env.development
+++ b/generators/app/templates/.env.development
@@ -1,1 +1,9 @@
-VUE_APP_API_BASE=http://localhost:3000
+#The defined variable must start with VITE_APP_
+VITE_APP_ENV = 'dev'
+# VITE_APP_BASE_URL = '/czwspfDeclare'
+VITE_APP_BASE_URL = '/czwspfDeclare'
+
+
+
+#image or oss address
+# VITE_APP_IMAGE_URL = 'https://github.jzfai.top/gofast-image'
