--- a/generators/app/templates/.env.production
+++ b/generators/app/templates/.env.production
@@ -1,1 +1,6 @@
-VUE_APP_API_BASE=https://locally-server.now.sh
+#The defined variable must start with VITE_APP_
+VITE_APP_ENV = 'prod'
+VITE_APP_BASE_URL = '/czwspfDeclare'
+
+#image or oss address
+# VITE_APP_IMAGE_URL = 'https://github.jzfai.top/gofast-image'
