--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-    "name": "generator-zx-vue",
-    "version": "1.0.1",
-    "main": "index.js",
-    "license": "MIT",
-    "dependencies": {
-        "yeoman-generator": "^5.7.0"
-    },
-    "publishConfig": {
-        "registry": "http://registry.npmjs.org/"
-    }
+  "name": "generator-zx-vue3",
+  "version": "1.0.1",
+  "description": "a vue scaffolding producted by zixiu",
+  "homepage": "https://github.com/CodeLittlePrince/generator-zx-vue",
+  "author": {
+    "name": "朱烜",
+    "email": "1046529973@qq.com",
+    "url": "https://github.com/godx-18"
+  },
+  "main": "generators/index.js",
+  "keywords": [
+    "vue",
+    "scaffold",
+    "yeoman",
+    "yeoman-generator"
+  ],
+  "engines": {
+    "npm": ">= 16.0.0"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "yeoman-generator": "^5.7.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
