--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "generator-zx-vue3",
-  "version": "1.0.1",
-  "description": "a vue scaffolding producted by zixiu",
-  "homepage": "https://github.com/CodeLittlePrince/generator-zx-vue",
+  "version": "1.0.3",
+  "description": "a vue scaffolding producted by zx",
+  "homepage": "https://github.com/GodX-18/generator-zx-vue",
+  "repository": "https://github.com/GodX-18/generator-zx-vue.git",
   "author": {
     "name": "朱烜",
     "email": "1046529973@qq.com",
