--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "generator-zx-vue",
-  "version": "1.0.31",
+  "name": "generator-zx-vue3",
+  "version": "1.0.32",
   "description": "a vue scaffolding producted by zx",
   "homepage": "https://github.com/GodX-18/generator-zx-vue",
   "repository": "https://github.com/GodX-18/generator-zx-vue.git",
