项目结构优化

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -42,5 +42,8 @@
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
