--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 #The defined variable must start with VITE_APP_
 VITE_APP_ENV = 'dev'
-VITE_APP_BASE_URL = '/dev-api'
+# VITE_APP_BASE_URL = '/czwspfDeclare'
+VITE_APP_BASE_URL = '/czwspfDeclare'
 
 
 
