--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -39,6 +39,7 @@
     "sass": "^1.57.1",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.12.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
